# Somebody-Skills

./: .env.example  .gitignore  README.md  package-lock.json  package.json  project.md  pyproject.toml  tsconfig.json
demo_data/: blog1.md  blog2.txt  notes.json
python/: __main__.py
python/distillation/: clusterer.py  debater.py  embedder.py  engine.py  extractor.py  llm_client.py  prober.py
python/llm_service/: server.py
python/preprocessor/: pipeline.py
python/report/: generator.py
src/cli/: index.ts
src/cli/commands/: check.ts  collect.ts  distill.ts  install.ts  pack.ts  setup.ts  test.ts
src/data-collector/: index.ts
src/data-collector/crawlers/: generic.ts  github.ts  local.ts
src/env-manager/: index.ts
src/orchestrator/: index.ts
src/packager/: index.ts
src/types/: pdf-parse.d.ts
src/utils/: config.ts  db.ts  logger.ts  python-bridge.ts
templates/: skill.md.hbs
